crucible-syntax/test-data/simulator-tests/loop-err.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====
Assuming:
* in main test-data/simulator-tests/loop-err.cbl:10:5: nonzero start
    not (eq 0 cx@0:n)
* The branch in main from test-data/simulator-tests/loop-err.cbl:17:5 to test-data/simulator-tests/loop-err.cbl:27:12
    eq 0 (natMod (natSum (natMul 2 cx@0:n)) 6)
Prove:
  test-data/simulator-tests/loop-err.cbl:27:5: error: in main
  oopsie!
  false
COUNTEREXAMPLE
Assuming:
* in main test-data/simulator-tests/loop-err.cbl:10:5: nonzero start
    not (eq 0 cx@0:n)
* The branch in main from test-data/simulator-tests/loop-err.cbl:17:5 to test-data/simulator-tests/loop-err.cbl:20:13
    not (eq 0 (natMod (natSum (natMul 2 cx@0:n)) 6))
* The branch in main from test-data/simulator-tests/loop-err.cbl:17:5 to test-data/simulator-tests/loop-err.cbl:27:12
    eq 0 (natMod (natSum (natMul 4 cx@0:n)) 6)
Prove:
  test-data/simulator-tests/loop-err.cbl:27:5: error: in main
  oopsie!
  false
PROVED
Assuming:
* in main test-data/simulator-tests/loop-err.cbl:10:5: nonzero start
    not (eq 0 cx@0:n)
* The branch in main from test-data/simulator-tests/loop-err.cbl:17:5 to test-data/simulator-tests/loop-err.cbl:20:13
    not (eq 0 (natMod (natSum (natMul 2 cx@0:n)) 6))
* The branch in main from test-data/simulator-tests/loop-err.cbl:17:5 to test-data/simulator-tests/loop-err.cbl:20:13
    not (eq 0 (natMod (natSum (natMul 4 cx@0:n)) 6))
* The branch in main from test-data/simulator-tests/loop-err.cbl:17:5 to test-data/simulator-tests/loop-err.cbl:27:12
    eq 0 (natMod (natSum (natMul 8 cx@0:n)) 6)
Prove:
  test-data/simulator-tests/loop-err.cbl:27:5: error: in main
  oopsie!
  false
PROVED
Assuming:
* in main test-data/simulator-tests/loop-err.cbl:10:5: nonzero start
    not (eq 0 cx@0:n)
* The branch in main from test-data/simulator-tests/loop-err.cbl:17:5 to test-data/simulator-tests/loop-err.cbl:20:13
    not (eq 0 (natMod (natSum (natMul 2 cx@0:n)) 6))
* The branch in main from test-data/simulator-tests/loop-err.cbl:17:5 to test-data/simulator-tests/loop-err.cbl:20:13
    not (eq 0 (natMod (natSum (natMul 4 cx@0:n)) 6))
* The branch in main from test-data/simulator-tests/loop-err.cbl:17:5 to test-data/simulator-tests/loop-err.cbl:20:13
    not (eq 0 (natMod (natSum (natMul 8 cx@0:n)) 6))
Prove:
  test-data/simulator-tests/loop-err.cbl:23:5: error: in main
  nonzero
  not (natLe (natSum (natMul 8 cx@0:n)) 0)
PROVED
